feat: created pages male and female

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
       <ion-label>Lista</ion-label>
     </ion-tab-button>
 
-    <!-- <ion-tab-button tab="female">
+    <ion-tab-button tab="female">
       <ion-icon name="female-outline"></ion-icon>
       <ion-label>Feminino</ion-label>
     </ion-tab-button>
@@ -13,6 +13,22 @@
     <ion-tab-button tab="male">
       <ion-icon name="male-outline"></ion-icon>
       <ion-label>Masculino</ion-label>
-    </ion-tab-button> -->
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
+
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
+<div>TESTE</div>
