--- a/src/app/male/male.page.html
+++ b/src/app/male/male.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Lista </ion-title>
+    <ion-title> Feminino </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
       <b>GIGA Sistemas</b>
     </ion-list-header>
     <div class="border-wrapper">
-      <i class="title-page">Conheça alguns dos nossos usuários</i>
+      <i class="title-page">Esse é o nosso time masculino</i>
     </div>
     <div class="wrapper-user-detail" *ngIf="selectedItem">
       <div class="image-div-detail">
