--- a/src/app/female/female.page.scss
+++ b/src/app/female/female.page.scss
@@ -1,6 +1,6 @@
 .header-list {
   height: 100px;
-  background-color: var(--ion-color-primary);
+  background-color: #ae6df8;
   text-transform: capitalize;
   margin-bottom: -40px;
   @media screen and (min-width: 768px) {
