--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -13,9 +13,7 @@
         {{ user.name.first + " " + user.name.last }}
       </h2>
       <p class="email-users">{{ user.email }}</p>
-      <p class="email-users">Idade: {{ user.dob.age }}</p>
-      <!-- <h2 class="name-users">Felipe Torres</h2>
-   <p class="email-users">felipe.torres@example.com</p> -->
+      <!-- <p class="email-users">Idade: {{ user.dob.age }}</p> -->
     </ion-label>
     <!-- <a href="javascript:;" class="btn btn-primary" (click)="selectItem(u)">+ Amigo</a> -->
   </div>
