--- a/src/app/item-list/item-list.component.scss
+++ b/src/app/item-list/item-list.component.scss
@@ -7,18 +7,19 @@
   text-decoration: none;
   border: solid 1px transparent;
   border-radius: 35px;
-  background-color: #c3c3c3;
+  background-color: #e9e9e9;
   box-shadow: 7px 0px 10px -8px rgba(0, 0, 0, 0.1);
   font-family: "Roboto", sans-serif;
   &:hover {
     border: solid 1px var(--ion-color-primary);
   }
   @media screen and (min-width: 768px) {
+    box-shadow: 10px 10px 20px -9px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    height: 180px;
-    width: 490px;
+    height: 170px;
+    width: 500px;
     flex-direction: column;
-    background-color: #d1d1d1;
+    background-color: #e9e9e9;
   }
 }
 .list-item {
@@ -34,6 +35,13 @@
 .wrapper-item {
   margin-top: 30px;
   padding: 5px 5px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+    display: flex;
+  }
 }
 .header-list {
   text-transform: capitalize;
@@ -48,7 +56,7 @@
   font-weight: 600;
   font-family: "Roboto", sans-serif;
   @media screen and (min-width: 768px) {
-    margin-top: 60px;
+    margin-top: 30px;
     font-weight: 600;
     font-size: 1.1rem;
     justify-content: center;
@@ -76,7 +84,6 @@
   @media screen and (min-width: 768px) {
     display: block;
     margin-top: 20px;
-    height: 90px;
-    width: auto;
+    // height: 100%;
   }
 }
