--- a/src/app/female/female.page.scss
+++ b/src/app/female/female.page.scss
@@ -1,6 +1,6 @@
 .header-list {
   height: 100px;
-  background-color: #ae6df8;
+  background-color: #7ffff4;
   text-transform: capitalize;
   margin-bottom: -40px;
   @media screen and (min-width: 768px) {
@@ -109,7 +109,7 @@
   }
 }
 .flow-scroll {
-  margin-top: 350px;
+  margin-top: 360px;
   position: relative;
   justify-content: center;
   align-items: center;
@@ -119,7 +119,6 @@
   @media screen and (min-width: 768px) {
     justify-content: space-around;
     width: 100%;
-    // height: 100vh;
     flex-wrap: wrap;
     width: 100%;
   }
