feat: created splash page ang config

--- a/src/app/splash/splash-page.html
+++ b/src/app/splash/splash-page.html
@@ -1,3 +1,10 @@
-<p>
-  splash-page works!
-</p>
+<ion-content>
+  <div class="content animate__heartBeat">
+    <img
+      class="img-splash"
+      src="../../assets/logo.png"
+      alt="image mensage face happy"
+    />
+    <h2 class="title-splash">Clientes GIGA</h2>
+  </div>
+</ion-content>
