--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,25 @@
-
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--ion-color-primary);
+  .img-splash {
+    align-items: center;
+    display: flex;
+    width: 100px;
+    height: auto;
+  }
+  .title-splash {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 2rem;
+    color: #f7f7f7;
+    font-weight: 700;
+  }
+}
